--- a/recipe-page-main/css/recipe.css
+++ b/recipe-page-main/css/recipe.css
@@ -58,6 +58,7 @@ span{
     margin-top: -0.5em;
     list-style-position: inside;
     margin-bottom: 4em;
+    position: relative;
 }
 
 .preparation::marker{
