--- a/four-card-feature-section-master/css/blog.css
+++ b/four-card-feature-section-master/css/blog.css
@@ -9,16 +9,12 @@
     vertical-align: baseline;
 }
 
-
 body, html{
     font-size: 15px;
     font-family: "Poppins", sans-serif;
     color: hsl(229, 6%, 66%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100%;
 }
+
 
 h1 {
     font-size: 2em;
@@ -41,30 +37,45 @@ h3 {
 
 p{
     margin-top: 1em;
-    max-width: 35em;
     margin-bottom: 2em;
     font-size: 15px;
 }
 
 .description{
     text-align: center;
+    max-width: 20em;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 40px;
 }
 
-section.super{
+.main-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2em;
+    gap: 2em;
+}
+
+.main-container section.super{
     border-top: 4px solid hsl(180, 62%, 55%);
- 
+
 }
 
-section.calculator{
+.main-container section.calculator{
     border-top: 4px solid hsl(212, 86%, 64%);
+
 }
 
-section.karma{
+.main-container section.karma{
     border-top: 4px solid hsl(34, 97%, 64%);
+
 }
 
-section.builder{
+.main-container section.builder{
     border-top: 4px solid hsl(0, 78%, 62%);
+
 }
 
 section{
@@ -75,6 +86,47 @@ section{
     font-size: 1.1em;
 }
 
-img{
-    width: 4em;
+@media (min-width: 1448px){
+    main{
+        flex-direction: row;
+    }
+
+    .main-container{
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(4, 0.5fr);
+        gap: 20px;
+        align-content: center;
+    }
+    
+    .main-container section.super{
+
+        grid-column: 2;
+        grid-row: 2;
+    }
+    
+    .main-container section.calculator{
+
+        grid-column: 4;
+        grid-row: 2;
+    }
+    
+    .main-container section.karma{
+
+        grid-column: 3;
+        grid-row: 3;
+    }
+    
+    .main-container section.builder{
+        grid-column: 3;
+        grid-row: 1;
+    }
+    .description{
+        text-align: center;
+        max-width: 35em;
+        margin: auto;
+        margin-top: 10px;
+        margin-bottom: 40px;
+    }
+    
 }
