--- a/four-card-feature-section-master/css/blog.css
+++ b/four-card-feature-section-master/css/blog.css
@@ -13,6 +13,10 @@ body, html{
     font-size: 15px;
     font-family: "Poppins", sans-serif;
     color: hsl(229, 6%, 66%);
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+    flex-direction: column;
 }
 
 
@@ -86,7 +90,20 @@ section{
     font-size: 1.1em;
 }
 
+@media (min-width: 375px)
+{
+    body{
+        min-height: 220vh;
+    }
+    .title{
+        margin-top: 0;
+    }
+}
 @media (min-width: 1448px){
+
+    body{
+        min-height: 100vh;
+    }
     main{
         flex-direction: row;
     }
@@ -126,7 +143,10 @@ section{
         max-width: 35em;
         margin: auto;
         margin-top: 10px;
-        margin-bottom: 40px;
+    }
+
+    .title{
+        margin-top: 3em;
     }
     
 }
