--- a/four-card-feature-section-master/css/blog.css
+++ b/four-card-feature-section-master/css/blog.css
@@ -45,6 +45,8 @@ p{
     font-size: 15px;
 }
 
+
+
 .description{
     text-align: center;
     max-width: 20em;
@@ -82,21 +84,40 @@ p{
 
 }
 
-section{
+section {
+    display: grid;
     border-radius: .2em;
     box-shadow: 0 10px 8px rgba(163, 160, 160, 0.3);
-    max-width: 20em;
-    padding: 2.5em;
     font-size: 1.1em;
+    transition: box-shadow 0.3s ease-in-out;
+    padding: 2em; 
 }
+
+section img {
+    justify-self: end; 
+}
+
+section:hover{
+    box-shadow: 0 20px 16px rgba(163, 160, 160, 0.5);
+    cursor: pointer;
+}
+
 
 @media (min-width: 375px)
 {
     body{
-        min-height: 220vh;
+        min-height: 200vh;
     }
     .title{
         margin-top: 0;
+    }
+    section {
+        max-width: 20em;
+        padding: 2em;
+    }
+
+    section p{
+        width: 19.5em;
     }
 }
 @media (min-width: 1448px){
@@ -117,26 +138,25 @@ section{
     }
     
     .main-container section.super{
-
         grid-column: 2;
         grid-row: 2;
     }
     
     .main-container section.calculator{
-
         grid-column: 4;
         grid-row: 2;
     }
     
     .main-container section.karma{
-
         grid-column: 3;
         grid-row: 3;
+        margin-top: -8.5em;
     }
     
     .main-container section.builder{
         grid-column: 3;
         grid-row: 1;
+        margin-bottom: -8.5em;
     }
     .description{
         text-align: center;
@@ -146,7 +166,17 @@ section{
     }
 
     .title{
-        margin-top: 3em;
+        margin-top: 8em;
+        margin-bottom: 2em;
     }
+
+    section{
+        padding: 2.5em;
+    }
+
+    section p{
+        width: 20em;
+    }
+
     
 }
