--- a/testimonials-grid-section-main/css/testimonials.css
+++ b/testimonials-grid-section-main/css/testimonials.css
@@ -9,9 +9,52 @@
     vertical-align: baseline;
 }
 
+body {
+    font-family: 'Barlow Semi Condensed', sans-serif;
+    background-color: hsl(210, 36%, 96%);
+    line-height: 1.6;
+    color: hsl(217, 19%, 35%);
+    padding: 20px;
+}
+
 .main-container {
-    font-family: "Barlow Semi Condensed", serif;
+    display: grid;
+    grid-template-areas:
+    "daniel daniel jona kira"
+    "jean patrick jona kira";;
     gap: 20px;
+    max-width: 1500px;
+    margin: 0 auto;
+}
+
+article {
+    border-radius: 15px;
+    padding: 20px;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: hsl(0, 0%, 100%);
+}
+
+article .avatar {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+article .avatar img {
+    border-radius: 50%;
+    width: 45px;
+    height: 45px;
+    margin-right: 15px;
+    border: 2px solid rgba(255, 255, 255, 0.8);
+}
+
+article .avatar-content {
+    display: flex;
+    flex-direction: column;
 }
 
 .main-container .daniel{
@@ -19,15 +62,11 @@
     padding: 3em;
     border-radius: 0.5em;
     width: 49em;
+    grid-area: daniel;
 }
 
-
-
 .main-container .daniel img {
-    border-radius: 50%;
     border: 3px solid hsl(263, 43%, 58%);
-    margin-right: 15px;
-    max-width: 5%;
 }
 
 .avatar{
@@ -39,14 +78,14 @@
     background-color: hsl(217, 19%, 35%);
     padding: 2em;
     border-radius: 0.5em;
-    width: 18em;
+    width: 20em;
+    grid-area: daniel jona;
+    margin-left: -18em;
 }
 
 .main-container .jona img {
-    border-radius: 50%;
     border: 2px solid hsl(0, 0%, 100%);
     margin-right: 15px;
-    max-width: 14%;
 }
 
 .main-container .jean{
@@ -54,12 +93,11 @@
     padding: 2em;
     border-radius: 0.5em;
     width: 20em;
+    grid-area: jean;
 }
 
 .main-container .jean img {
-    border-radius: 50%;
     margin-right: 15px;
-    max-width: 16%;
 }
 
 .jean p{
@@ -80,25 +118,25 @@
     padding: 2em;
     border-radius: 0.5em;
     width: 44em;
+    grid-area: patrick;
 }
 
 .main-container .patrick img {
-    border-radius: 50%;
     border: 3px solid hsl(263, 43%, 58%);
     margin-right: 15px;
-    max-width: 5%;
+
 }
 
 .main-container .kira{
     background-color: hsl(0, 0%, 100%);
     padding: 2em;
     border-radius: 0.5em;
+    width: 15em;
+    grid-area: kira;
 }
 
 .main-container .kira img {
-    border-radius: 50%;
     margin-right: 15px;
-    max-width: 16%;
 }
 
 .kira p{
