--- a/testimonials-grid-section-main/css/testimonials.css
+++ b/testimonials-grid-section-main/css/testimonials.css
@@ -200,9 +200,10 @@ h2{
     }
 
     .main-container .jona{
-        width: 19em;
+        width: 18.7em;
         grid-area: daniel jona;
-        margin-left: -24.2em;
+        margin-left: -24.7em;
+        height: 19.3em;
     }
 
     .main-container .jean{
@@ -220,9 +221,9 @@ h2{
     }
 
     .main-container .kira{
-        width: 16em;
+        width: 15.7em;
         grid-area: kira;
-        margin-left: -1em;
+        margin-left: -2em;
     }
 
     .main-container .kira img {
