--- a/testimonials-grid-section-main/css/testimonials.css
+++ b/testimonials-grid-section-main/css/testimonials.css
@@ -23,11 +23,6 @@ body {
 .main-container{
     gap: 20px;
     margin: 0 auto;
-    transition: box-shadow 0.3s ease-in-out;
-}
-
-.main-container:hover {
-    box-shadow: 10px 30px 10px 10px rgba(0, 0, 0, 0.3);
 }
 
 svg {
@@ -198,11 +193,17 @@ h2{
         "daniel daniel jona kira"
         "jean patrick jona kira";;
         max-width: 1500px;
+        transition: box-shadow 0.3s ease-in-out;
+    }
+
+    .main-container:hover {
+        box-shadow: 0 0 20px 20px rgba(0, 0, 0, 0.3);
     }
 
     .main-container .daniel{
         width: 43em;
         grid-area: daniel;
+        margin-left: 0.3em;
     }
 
     .main-container .jona{
