--- a/testimonials-grid-section-main/css/testimonials.css
+++ b/testimonials-grid-section-main/css/testimonials.css
@@ -17,12 +17,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-}
 
-.main-container{
-    gap: 20px;
-    margin: 0 auto;
 }
 
 svg {
@@ -164,7 +159,7 @@ h2{
 
 
 @media (min-width: 375px){
-
+    
     .main-container{
         display: flex;
         flex-direction: column;
@@ -173,7 +168,6 @@ h2{
         gap: 2em;
         max-width: 27.6em;
     }
-
 }
 
 @media (min-width: 1448px){
@@ -192,7 +186,7 @@ h2{
         grid-template-areas:
         "daniel daniel jona kira"
         "jean patrick jona kira";;
-        max-width: 1500px;
+        max-width: 100%;
         transition: box-shadow 0.3s ease-in-out;
     }
 
